// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compatibility routes GET /posts/latest should return anonymous feed filtered by sources 1`] = `
Array [
  Object {
    "id": "p5",
  },
  Object {
    "id": "p2",
  },
  Object {
    "id": "p4",
  },
  Object {
    "id": "p1",
  },
]
`;

exports[`compatibility routes GET /posts/latest should return anonymous feed filtered by tags 1`] = `
Array [
  Object {
    "id": "p5",
  },
  Object {
    "id": "p1",
  },
]
`;

exports[`compatibility routes GET /posts/latest should return anonymous feed filtered by tags and sources 1`] = `
Array [
  Object {
    "id": "p5",
  },
  Object {
    "id": "p4",
  },
  Object {
    "id": "p1",
  },
]
`;

exports[`compatibility routes GET /posts/latest should return anonymous feed with no filters ordered by popularity 1`] = `
Array [
  Object {
    "id": "p5",
  },
  Object {
    "id": "p2",
  },
]
`;

exports[`compatibility routes GET /posts/publication should return single source feed 1`] = `
Array [
  Object {
    "id": "p5",
  },
  Object {
    "id": "p2",
  },
]
`;

exports[`compatibility routes GET /posts/tag should return single tag feed 1`] = `
Array [
  Object {
    "id": "p5",
  },
  Object {
    "id": "p4",
  },
  Object {
    "id": "p1",
  },
]
`;

exports[`query anonymousFeed should return anonymous feed filtered by sources 1`] = `
Object {
  "anonymousFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "url": "http://p2.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjM=",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query anonymousFeed should return anonymous feed filtered by tags 1`] = `
Object {
  "anonymousFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query anonymousFeed should return anonymous feed filtered by tags and sources 1`] = `
Object {
  "anonymousFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query anonymousFeed should return anonymous feed while excluding sources 1`] = `
Object {
  "anonymousFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "url": "http://p2.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "url": "http://p3.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query anonymousFeed should return anonymous feed with no filters ordered by popularity 1`] = `
Object {
  "anonymousFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "url": "http://p2.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "url": "http://p3.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjQ=",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query anonymousFeed should return anonymous feed with no filters ordered by time 1`] = `
Object {
  "anonymousFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "url": "http://p1.com",
        },
      },
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "url": "http://p2.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "url": "http://p3.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "url": "http://p5.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjQ=",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query sourceFeed should return a single source feed 1`] = `
Object {
  "sourceFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "url": "http://p2.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query tagFeed should return a single tag feed 1`] = `
Object {
  "tagFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "hasNextPage": false,
    },
  },
}
`;
